--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 #spring.cloud.config.uri= http://configserver:8891
 #server properties
-spring.application.name=userprofile
-
+#spring.application.name=userprofile
+#
 #mongo properties
-server.port= 8070
-spring.data.mongodb.database=userprofile
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://localhost/userprofile
-spring.data.mongodb.username=
-
+#server.port= 8070
+#spring.data.mongodb.database=userprofile
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.uri=mongodb://localhost/userprofile
+#spring.data.mongodb.username=
+#
 #eureka properties
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
