--- a/recommendation/pom.xml
+++ b/recommendation/pom.xml
@@ -13,10 +13,10 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.stackroute</groupId>
+		<artifactId>capgemini-w1-godeliver-test</artifactId>
+		<version>1.0.0</version>
+		
 	</parent>
 
 	<properties>
@@ -63,11 +63,7 @@
 			<version>2.8.0</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-jdbc</artifactId> 
-			<version>5.0.8.RELEASE</version> </dependency> -->
-		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
-		<!-- <dependency> <groupId>org.apache.kafka</groupId> <artifactId>kafka_2.12</artifactId> 
-			</dependency> -->
+		
 		<dependency>
 			<groupId> org.springframework.kafka </groupId>
 			<artifactId> spring-kafka </artifactId>
@@ -76,8 +72,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.neo4j</groupId> <artifactId>neo4j-ogm-bolt-driver</artifactId> 
-			<version>2.1.1</version> </dependency> -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -87,8 +82,6 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
-
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
