--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,8 +79,6 @@ services:
 
    network_mode: "host"
 
-   image: demo-zuul-service
-
    hostname: localhost
 
    ports:
@@ -126,7 +124,7 @@ services:
     
    environment:
  
-    MYSQL_ROOT_PASSWORD: Root@123
+    MYSQL_ALLOW_EMPTY_PASSWORD: "true" 
 
     MYSQL_DATABASE: go_d
     
@@ -215,8 +213,6 @@ services:
 
    image: neo4j
 
-   network_mode: host
-
    container_name: spring-neo4j
 
    ports:
@@ -228,6 +224,34 @@ services:
 
     - $HOME/neo4j/data:/data
 
+   healthcheck:
+
+    test: "exit 0"
+
+
+  book-service:
+
+   build: book-service/
+
+   image: book-service
+
+   restart: always
+
+   network_mode: host
+
+   container_name: bookservice
+
+   depends_on:
+
+    - mongo
+
+   ports:
+
+    - 8888:8888
+
+   healthcheck:
+
+    test: "exit 0"
 
 
   zookeeper:
@@ -241,7 +265,7 @@ services:
 
     test: "exit 0"
     
-       
+
   
   kafka:
    image: wurstmeister/kafka
@@ -252,14 +276,13 @@ services:
    ports:
     - '9092:9092'
    environment:
-    KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+    KAFKA_ZOOKEEPER_CONNECT: 'localhost:2181'
     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
     KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-    KAFKA_CREATE_TOPICS: "userprofile, book_details"
+    KAFKA_CREATE_TOPICS: "userprofile:1:1, book_details:1:1"
    restart: always
    network_mode: host 
    hostname: localhost
    healthcheck:
 
     test: "exit 0"
-
