--- a/user-login/src/main/resources/application.yml
+++ b/user-login/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/go_d?useSSL=false
     username: root
-    password: root
+    password: 
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
