--- a/recommendation/src/main/resources/bootstrap.properties
+++ b/recommendation/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 #spring.data.neo4j.username = neo4j
 #spring.data.neo4j.password = root123
 #spring.data.neo4j.uri=bolt://localhost
-#server.port=8092
+server.port=8092
 spring.application.name=recommendation
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #eureka.client.register-with-eureka=true
