--- a/recommendation/pom.xml
+++ b/recommendation/pom.xml
@@ -13,10 +13,10 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>com.stackroute</groupId>
-		<artifactId>capgemini-w1-godeliver-test</artifactId>
-		<version>1.0.0</version>
-		
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.4.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -46,7 +46,7 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>2.0.1.RELEASE</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-neo4j</artifactId>
@@ -63,7 +63,7 @@
 			<version>2.8.0</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId> org.springframework.kafka </groupId>
 			<artifactId> spring-kafka </artifactId>
@@ -72,7 +72,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		
+		<!-- <dependency> <groupId>org.neo4j</groupId> <artifactId>neo4j-ogm-bolt-driver</artifactId> 
+			<version>2.1.1</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -82,6 +83,8 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
