--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,8 +79,6 @@ services:
 
    network_mode: "host"
 
-   image: demo-zuul-service
-
    hostname: localhost
 
    ports:
@@ -93,81 +91,81 @@ services:
 
   
 
-  user-login:
-
-   build: user-login/
-   
-   image: user-auth
-
-   container_name: user-login
-   network_mode: "host"
-   hostname: localhost
-   ports:
-      - 8082:8082
-   depends_on:
-     eureka-server:
-       condition: service_healthy
-     database:
-       condition: service_healthy
-   healthcheck:
-     test: "exit 0"
-
-
-
-  database:
-  
-   container_name: mysql-login
-
-   image: mysql:5.5
-
-   ports:
-
-    - 3306:3306
-    
-   environment:
- 
-    MYSQL_ROOT_PASSWORD: Root@123
-
-    MYSQL_DATABASE: go_d
-    
-    MYSQL_USER: root
-    
-   volumes:
-      - /opt/data:/var/lib/mysql
-      
-   network_mode: "host"
-   
-   hostname: localhost
-    
-   healthcheck:
-
-    test: exit 0
-
-
-  user-profile:
-  
-   build: user-profile/
-   
-   image: user-profile
-
-   restart: always
-
-   network_mode: host
-
-   container_name: userprofile
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8070:8070
-
-   healthcheck:
-
-    test: "exit 0"
-
+#  user-login:
+#
+#   build: user-login/
+#   
+#   image: user-auth
+#
+#   container_name: user-login
+#   network_mode: "host"
+#   hostname: localhost
+#   ports:
+#      - 8082:8082
+#   depends_on:
+#     eureka-server:
+#       condition: service_healthy
+#     database:
+#       condition: service_healthy
+#   healthcheck:
+#     test: "exit 0"
+#
+#
+#
+#  database:
+#  
+#   container_name: mysql-login
+#
+#   image: mysql:5.5
+#
+#   ports:
+#
+#    - 3306:3306
+#    
+#   environment:
+# 
+#    MYSQL_ROOT_PASSWORD: Root@123
+#
+#    MYSQL_DATABASE: go_d
+#    
+#    MYSQL_USER: root
+#    
+#   volumes:
+#      - /opt/data:/var/lib/mysql
+#      
+#   network_mode: "host"
+#   
+#   hostname: localhost
+#    
+#   healthcheck:
+#
+#    test: exit 0
+#
+#
+#  user-profile:
+#  
+#   build: user-profile/
+#   
+#   image: user-profile
+#
+#   restart: always
+#
+#   network_mode: host
+#
+#   container_name: userprofile
+#
+#   depends_on:
+#
+#    - mongo
+#
+#   ports:
+#
+#    - 8070:8070
+#
+#   healthcheck:
+#
+#    test: "exit 0"
+#
 
   mongo:
 
@@ -184,50 +182,63 @@ services:
    volumes:
 
     - /usr/src/home:/data/db
-
-
-  recommendation:
-  
-   build: recommendation/
-   
-   image: recommendation
-
+    
+  book-service:
+   build: book-service/
+   image: book-service
    restart: always
-
    network_mode: host
-
-   container_name: recommendation
-
+   container_name: bookservice
    depends_on:
-
-    - neo4j
-
+    - mongo
    ports:
-
-    - 8092:8092
-
+    - 8888:8888
    healthcheck:
-
     test: "exit 0"
-
-
-  neo4j:
-
-   image: neo4j
-
-   network_mode: host
-
-   container_name: spring-neo4j
-
-   ports:
-
-    - 7474:7474
-    - 7687:7687
-
-   volumes:
-
-    - $HOME/neo4j/data:/data
-
+    
+ 
+#  recommendation:
+#  
+#   build: recommendation/
+#   
+#   image: recommendation
+#
+#   restart: always
+#
+#   network_mode: host
+#
+#   container_name: recommendation
+#
+#   depends_on:
+#
+#    - neo4j
+#
+#   ports:
+#
+#    - 8092:8092
+#
+#   healthcheck:
+#
+#    test: "exit 0"
+#
+#
+#  neo4j:
+#
+#   image: neo4j
+#
+#   network_mode: host
+#
+#   container_name: spring-neo4j
+#
+#   ports:
+#
+#    - 7474:7474
+#    - 7687:7687
+#
+#   volumes:
+#
+#    - $HOME/neo4j/data:/data
+#
 
 
   zookeeper:
