--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,55 +89,55 @@ services:
     test: "exit 0"
     
 
-  user-login:
-
-   build: user-login/
-   
-   image: user-auth
-
-   container_name: user-login
-   network_mode: "host"
-   hostname: localhost
-   ports:
-      - 8082:8082
-   depends_on:
-     
-     database:
-       condition: service_healthy
-   healthcheck:
-     test: "exit 0"
-
-
-
-  database:
-  
-   container_name: mysql-login
-
-   image: mysql:5.5
-
-   ports:
-
-    - 3306:3306
-    
-   environment:
- 
-    MYSQL_ALLOW_EMPTY_PASSWORD: "true" 
-
-    MYSQL_DATABASE: go_d
-    
-    MYSQL_USER: root
-    
-   volumes:
-      - /opt/data:/var/lib/mysql
-      
-   network_mode: "host"
-   
-   hostname: localhost
-    
-   healthcheck:
-
-    test: exit 0
-
+#  user-login:
+#
+#   build: user-login/
+#   
+#   image: user-auth
+#
+#   container_name: user-login
+#   network_mode: "host"
+#   hostname: localhost
+#   ports:
+#      - 8082:8082
+#   depends_on:
+#     
+#     database:
+#       condition: service_healthy
+#   healthcheck:
+#     test: "exit 0"
+#
+#
+#
+#  database:
+#  
+#   container_name: mysql-login
+#
+#   image: mysql:5.5
+#
+#   ports:
+#
+#    - 3306:3306
+#    
+#   environment:
+# 
+#    MYSQL_ALLOW_EMPTY_PASSWORD: "true" 
+#
+#    MYSQL_DATABASE: go_d
+#    
+#    MYSQL_USER: root
+#    
+#   volumes:
+#      - /opt/data:/var/lib/mysql
+#      
+#   network_mode: "host"
+#   
+#   hostname: localhost
+#    
+#   healthcheck:
+#
+#    test: exit 0
+#
 
 
 
@@ -183,30 +183,30 @@ services:
     - /usr/src/home:/data/db
     
 
-  book-service:
-
-   build: book-service/
-
-   image: book-service
-
-   restart: always
-
-   network_mode: host
-
-   container_name: bookservice
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8888:8888
-
-   healthcheck:
-
-    test: "exit 0"
-    
+#  book-service:
+#
+#   build: book-service/
+#
+#   image: book-service
+#
+#   restart: always
+#
+#   network_mode: host
+#
+#   container_name: bookservice
+#
+#   depends_on:
+#
+#    - mongo
+#
+#   ports:
+#
+#    - 8888:8888
+#
+#   healthcheck:
+#
+#    test: "exit 0"
+#    
 
   recommendation:
   
@@ -247,6 +247,8 @@ services:
    volumes:
 
     - $HOME/neo4j/data:/data
+   environment: 
+      - NEO4J_AUTH=neo4j/12345
 
    healthcheck:
 
