--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -35,6 +35,7 @@
     "materialize-css": "^0.100.2",
     "mdbootstrap": "^4.5.9",
     "multiple-checkboxes": "0.0.6",
+    "ngx-pagination": "^3.2.0",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
