--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -183,108 +183,108 @@ services:
     - /usr/src/home:/data/db
     
 
-  book-service:
-
-   build: book-service/
-
-   image: book-service
-
-   restart: always
-
-   network_mode: host
-
-   container_name: bookservice
-
-   depends_on:
-
-    - mongo
-
-   ports:
-
-    - 8888:8888
-
-   healthcheck:
-
-    test: "exit 0"
-    
-
-  recommendation:
-  
-   build: recommendation/
-   
-   image: recommendation
-
-   restart: always
-
-   network_mode: host
-
-   container_name: recommendation
-
-   depends_on:
-
-    - neo4j
-
-   ports:
-
-    - 8092:8092
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-  neo4j:
-
-   image: neo4j
-
-   container_name: spring-neo4j
-
-   ports:
-
-    - 7474:7474
-    - 7687:7687
-
-   volumes:
-
-    - $HOME/neo4j/data:/data
-   environment: 
-    - NEO4J_AUTH=none
-
-   healthcheck:
-
-    test: "exit 0"
-
-
-  prometheus:
-    ports:
-      - 9090:9090
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-    image: prom/prometheus
-    network_mode: host 
-    hostname: localhost
-    restart: always
-    healthcheck:
-      test: "exit 0"
-
-  grafana:
-    image: grafana/grafana
-    container_name: grafana
-    volumes:
-      - /var/lib/grafana
-    restart: always
-    network_mode: host 
-    hostname: localhost
-    ports:
-      - 3000:3000
-    environment:
-     - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-     - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-     - GF_USERS_ALLOW_SIGN_UP=false
-    healthcheck:
-      test: "exit 0"
+#  book-service:
+#
+#   build: book-service/
+#
+#   image: book-service
+#
+#   restart: always
+#
+#   network_mode: host
+#
+#   container_name: bookservice
+#
+#   depends_on:
+#
+#    - mongo
+#
+#   ports:
+#
+#    - 8888:8888
+#
+#   healthcheck:
+#
+#    test: "exit 0"
+#    
+#
+#  recommendation:
+#  
+#   build: recommendation/
+#   
+#   image: recommendation
+#
+#   restart: always
+#
+#   network_mode: host
+#
+#   container_name: recommendation
+#
+#   depends_on:
+#
+#    - neo4j
+#
+#   ports:
+#
+#    - 8092:8092
+#
+#   healthcheck:
+#
+#    test: "exit 0"
+#
+#
+#  neo4j:
+#
+#   image: neo4j
+#
+#   container_name: spring-neo4j
+#
+#   ports:
+#
+#    - 7474:7474
+#    - 7687:7687
+#
+#   volumes:
+#
+#    - $HOME/neo4j/data:/data
+#   environment: 
+#    - NEO4J_AUTH=none
+#
+#   healthcheck:
+#
+#    test: "exit 0"
+#
+#
+#  prometheus:
+#    ports:
+#      - 9090:9090
+#    volumes:
+#      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yml'
+#    image: prom/prometheus
+#    network_mode: host 
+#    hostname: localhost
+#    restart: always
+#    healthcheck:
+#      test: "exit 0"
+#
+#  grafana:
+#    image: grafana/grafana
+#    container_name: grafana
+#    volumes:
+#      - /var/lib/grafana
+#    restart: always
+#    network_mode: host 
+#    hostname: localhost
+#    ports:
+#      - 3000:3000
+#    environment:
+#     - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+#     - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+#     - GF_USERS_ALLOW_SIGN_UP=false
+#    healthcheck:
+#      test: "exit 0"
 
 
   zookeeper:
