--- a/logistics-service/src/main/resources/bootstrap.properties
+++ b/logistics-service/src/main/resources/bootstrap.properties
@@ -3,11 +3,12 @@ server.port= 8086
 spring.application.name: logistics
 
 #mongo properties
-spring.data.mongodb.database=logistics
 spring.data.mongodb.host=localhost
+spring.data.mongodb.database=logistics
 spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://localhost/userprofile
-spring.data.mongodb.username=
+spring.data.mongodb.uri=mongodb://localhost:27017/logistics
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin123
 
 #eureka properties
 #eureka.client.register-with-eureka=true
