--- a/Order-details/src/main/resources/application.properties
+++ b/Order-details/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.application.name=orderdetails-service
 spring.data.mongodb.database=orderdetails
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
