--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -38,6 +38,7 @@
     "ngx-pagination": "^3.2.0",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
