--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.4",
     "@angular/cdk": "^6.4.6",
     "@angular/common": "^6.1.0",
@@ -23,6 +24,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "agm-direction": "^0.7.3",
     "angular-carousel": "^1.1.0",
     "angular-firebase": "^1.1.4",
     "angularfire2": "^5.0.0-rc.12",
