--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/uuid": "^3.4.4",
     "agm-direction": "^0.7.3",
     "angular-carousel": "^1.1.0",
     "angular-firebase": "^1.1.4",
