--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -13,10 +13,10 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.stackroute</groupId>
+		<artifactId>capgemini-w1-godeliver-test</artifactId>
+		<version>1.0.0</version>
+		<!-- <relativePath/> lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -45,10 +45,6 @@
 			<groupId>com.stripe</groupId>
 			<artifactId>stripe-java</artifactId>
 			<version>5.21.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
 		</dependency>
 	</dependencies>
 
