--- a/prometheus.yml
+++ b/prometheus.yml
@@ -73,4 +73,9 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
     - targets: ['172.23.239.120:8086']
-   
+
+  - job_name: 'cvrp-service'
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 5s
+    static_configs:
+    - targets: ['172.23.239.120:8086']
