--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -61,9 +61,10 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-client</artifactId>
-		</dependency>
+           	<groupId>org.springframework.cloud</groupId>
+           	<artifactId>spring-cloud-starter-config</artifactId>
+           	<version>2.0.1.RELEASE</version>
+       		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
