--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -30,6 +30,7 @@
     "angular-firebase": "^1.1.4",
     "angularfire2": "^5.0.0-rc.12",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^5.4.1",
     "font-awesome": "^4.7.0",
@@ -38,6 +39,7 @@
     "materialize-css": "^0.100.2",
     "mdbootstrap": "^4.5.9",
     "multiple-checkboxes": "0.0.6",
+    "ng2-charts": "^1.6.0",
     "ngx-pagination": "^3.2.0",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
